# VisCARS

./: .gitignore  CHANGELOG.rst  LICENSE  README.md  pyproject.toml
cars/data/: __init__.py
cars/evaluation/evaluators/: __init__.py  kfoldcv.py  loocv.py
cars/evaluation/metrics/: __init__.py  factory.py  metrics.py
cars/recommenders/: factory.py  fastppr.py  gcn.py  pagerank.py  ppr.py  random.py
cars/utils/: __init__.py
data/cars/restaurant_tijuana/: context_metadata.csv  item_metadata.csv  ratings.csv
data/output/evaluation/: performance.json  performance_.json
data/proeftuin/: graph.ttl
data/protego/: graph.ttl  protego_ddashboard.ttl  protego_zplus.ttl  protego_zplus_patients.ttl  visualizations.ttl
data/protego/output/: RDF2VecCC.json.pkl.gzip  compress.py  decompress.py
data/protego/subgraphs/zplus_1/: 1-1.txt  entity2id.txt  n-n.txt  test2id.txt  test2id_all.txt  train2id.txt  type_constrain.txt  valid2id.txt
data/protego/subgraphs/zplus_10/: 1-1.txt  entity2id.txt  n-1.txt  n-n.txt  test2id.txt  test2id_all.txt  train2id.txt  type_constrain.txt  valid2id.txt
data/protego/subgraphs/zplus_100/: 1-1.txt  entity2id.txt  (+6 more)
data/test/: graph.ttl
examples/: basic_usage.py  evaluation.py  performance_evaluation.py
examples/paper/: dashboard.css  dashboard.js  generate_dashboards.ipynb  nurse-dashboard-patient10.html  nurse-dashboard-patient9.html  operator-dashboard-patient10.html
notebooks/: algorithms.ipynb  cf.ipynb  content-recommendation.ipynb  evaluation.ipynb  explainability.ipynb  exploration.ipynb  graph_comparison.ipynb  gridsearch.ipynb  matrix_factorization.ipynb  performance.ipynb  playground.ipynb  recommender-networkx.ipynb  requirements.txt  scalability.ipynb  visualization-recommendation.ipynb
viscars/: requirements.txt
viscars/dao/: __init__.py
viscars/data/: __init__.py
viscars/evaluation/evaluators/: __init__.py  base.py  kfoldcv.py  loocv.py
viscars/evaluation/metrics/: factory.py  metrics.py
viscars/namespace/: __init__.py  dashboard.owl
viscars/recommenders/: __init__.py  base.py  cacf.py  cbcf.py  cf.py  factory.py  fastppr.py  gcn.py  mf.py  pagerank.py  ppr.py  random.py  random_.py
viscars/recommenders/similarity/: __init__.py  factory.py  rdf2vec.py  weisfeilerlehman.py
viscars/utils/: __init__.py
(+2453 files in other folders)
