[tool.poetry]
name = "VisCARS"
version = "1.0.0"
description = "VisCARS: Knowledge Graph-based Context-Aware Recommender System for Visualizations"
authors = ["Pieter Moens <pieter.moens@ugent.be>"]
packages = [
        { include = "viscars"}
    ]
readme = "README.md"
repository = "https://github.com/predict-idlab/VisCARS"
documentation = "https://github.com/predict-idlab/VisCARS"
keywords = ["recommender system", "visualizations", "context-aware"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]

[tool.poetry.dependencies]
python = "^3.7"
fast-pagerank = "^0.0.4"
matplotlib = "^3.4.2"
networkx = "^2.6.3"
numpy = "^1.20.2"
pandas = "^2.2.0"
pyrdf2vec = "^0.2.3"
rdflib = "^6.0.2"
scikit-learn = { version = "^0.24.2", python = ">=3.9" }

[tool.poetry.dev-dependencies]
jupyterlab = { version = "^3.4.0", optional = true }
pqdm = { version = "^0.2.0", optional = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"